--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nativescript-angular": "7.2.2",
     "nativescript-animated-circle": "1.1.0",
     "nativescript-https": "1.0.3",
+    "nativescript-modal-datetimepicker": "1.1.12",
     "nativescript-snackbar": "4.1.1",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.8",
