--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@ngtools/webpack": "7.3.4",
+    "nativescript-accordion": "6.0.0-beta.2",
     "nativescript-angular": "7.2.2",
     "nativescript-animated-circle": "1.1.0",
     "nativescript-https": "1.0.3",
     "nativescript-modal-datetimepicker": "1.1.12",
     "nativescript-snackbar": "4.1.1",
     "nativescript-theme-core": "~1.0.4",
+    "nativescript-ui-listview": "6.0.0",
     "reflect-metadata": "~0.1.8",
     "rxjs": "6.4.0",
     "rxjs-compat": "6.4.0",
