--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nativescript-accordion": "6.0.0-beta.2",
     "nativescript-angular": "7.2.2",
     "nativescript-animated-circle": "1.1.0",
+    "nativescript-geolocation": "5.0.0",
     "nativescript-google-maps-sdk": "2.7.0",
     "nativescript-https": "1.0.3",
     "nativescript-modal-datetimepicker": "1.1.12",
